Fixed botched ddockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,5 @@
-node_modules
-build
-.dockerignore
-Dockerfile
-.gitignore
-README.md
-src/react-app-env.d.ts
-src/index.css
-src/App.tsx
-public/index.html
-package.json
-tsconfig.json
-*.log
-npm-debug.log*
+target/
+**/node_modules
+**/.DS_Store
+.git
+.vscode
