update nginx to handle alb path based routing

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,11 @@ server {
         return 200 'OK';
     }
 
+    location ^~ /apps/ {
+        rewrite ^/apps/[^/]+(/.*)$ $1 break;
+        try_files $uri $uri/ /index.html;
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
     }
